Top righ-handed pitchers of all time

--- a/index.html
+++ b/index.html
@@ -14,6 +14,14 @@
             <li><a href="assets/Whitey_ford.jpg">Whitey Ford</a></li>
         </ol>
         
+        <h3>Top 5 right-handed pitchers of all time</h3>
+        <ol>
+            <li><a href="assets/Walter_johnson.jpg">Walter Johnson</a></li>
+            <li><a href="assets/Christy_mathewson.jpg">Christy Mathewson</a></li>     
+            <li><a href="assets/Grover_cleveland.jpg">Grover Cleveland "Pete" Alexander</a></li> 
+            <li><a href="assets/Roger_clemens.jpg">Roger Clemens</a></li>    
+            <li><a href="assets/Satchel_paige.jpg">Satchel Paige</a></li>
+        </ol>
         
     </body>
 </html>
